my_app2/ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: qatestlab
  labels:
    name: ingress-nginx-controller
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ingress-nginx
  template:
    metadata:
      labels:
        name: ingress-nginx
    spec:
      containers:
      - image: k8s.gcr.io/ingress-nginx/controller:v1.0.5
        name: controller
        args:
          - /nginx-ingress-controller
        ports:
          - containerPort: 80
            hostPort: 80
          - containerPort: 443
            hostPort: 443
