my_app2/postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  namespace: qatestlab
  labels:
    name: postgres-pod
    app: demo-voting-app
spec:
  containers:
    - name: postgres
      image: postgres
      ports:
        - containerPort: 5432
