my_app2/redis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  namespace: qatestlab
  labels:
    name: redis-pod
    app: demo-voting-app
spec:
  containers:
    - name: redis
      image: redis
      ports:
        - containerPort: 6379
