my_app2/result-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: result-app-pod
  namespace: qatestlab
  labels:
    name: result-app-pod
    app: demo-voting-app
spec:
  containers:
    - name: result-app
      image: kodekloud/examplevotingapp_result:v1
      ports:
        - containerPort: 80
