my_app2/voting-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: voting-app-pod
  namespace: qatestlab
  labels:
    name: voting-app-pod
    app: demo-voting-app
spec:
  containers:
    - name: voting-app
      image: kodekloud/examplevotingapp_vote:v1
      ports:
        - containerPort: 80
