my_app2/worker-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: worker-pod
  namespace: qatestlab
  labels:
    name: worker-pod
    app: demo-voting-app
spec:
  containers:
    - name: worker-app
      image: kodekloud/examplevotingapp_worker:v1
