my_app2/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: qatestlab
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    name: ingress-nginx
