my_app2/result-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: qatestlab
  labels:
    name: result-service
    app: demo-voting-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
  selector:
    name: result-app-pod
    app: demo-voting-app
