my_app2/voting-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  namespace: qatestlab
  labels:
    name: voting-service
    app: demo-voting-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32001
  selector:
    name: voting-app-pod
    app: demo-voting-app
